# xscreensaver

./: .gitignore  Configure-osr5  Configure-uw7  HPUX.Install  INSTALL  Imakefile  Imakefile.orig  Install-sco  Makefile  Makefile.720  Makefile.hp  Makefile.imake  Makefile.in  Makefile.shipped  Makefile.std  Makefile.sun  Makefile.win32  README  README.LUCS  README.SCO  README.VMS  README.debugging  README.hacking  README.md  README.skunkware  README2  Revisions  XLock  XLock.ad  XLock.ad.cln  aaa_vms.notes  aclocal.m4  ant.c  ball.c  bat.c  blank.c  blot.c  bomb.c  bouboule.c  bounce.c  (+158 more)
OSX/: ._InvertedSlider.m  ._PrefsReader.m  ._SaverTester.m  ._XScreenSaver.icns  ._XScreenSaverDMG.icns  ._XScreenSaverView.m  ._bindist-DS_Store  ._jwxyz.m  ._osxgrabscreen.m  AppController.h  AppController.m  InvertedSlider.h  InvertedSlider.m  LaunchScreen.storyboard  LaunchScreen.xib  Makefile  PrefsReader.h  PrefsReader.m  README  Randomizer.h  Randomizer.m  Randomizer.plist  SaverListController.h  SaverListController.m  SaverRunner.h  SaverRunner.icns  SaverRunner.m  SaverRunner.plist  SaverTester.h  SaverTester.m  SaverTester.plist  Updater.h  Updater.m  Updater.plist  Updater.xib  XScreenSaver.icns  XScreenSaver.plist  XScreenSaverAndroidWebloc.icns  XScreenSaverConfigSheet.h  XScreenSaverConfigSheet.m  (+54 more)
android/: Makefile  README  XScreenSaverDaydream.java.in  XScreenSaverGLView.c  XScreenSaverSettings.java.in  XScreenSaverView.c  XScreenSaverWallpaper.java.in  build.gradle  debug.keystore  generate_files.pl  glue.c  grabscreen-android.c  gradle.properties  jwxyz-timers.h  jwxyz.c  jwxyz.h  local.properties  screenhack-android.c  settings.gradle
bitmaps/: bad.xbm  bat-0.xbm  bat-1.xbm  bat-2.xbm  bat-3.xbm  bat-4.xbm  bat0.bit  bat2.bit  bat3.bit  bat5.bit  bat6.bit  bat7.bit  bounce-0.xbm  bounce-1.xbm  bounce-2.xbm  bounce-3.xbm  bounce-mask.xbm  bounce3.bit  cooperat.xbm  defect.xbm  donkey.xbm  earth.xbm  elephant.xbm  enterprise-2.xbm  enterprise-3.xbm  enterprise-5.xbm  enterprise-6.xbm  fish-0.xbm  fish-1.xbm  fish-2.xbm  fish-3.xbm  fish-4.xbm  fish-5.xbm  fish-6.xbm  fish-7.xbm  flipped_gray.xbm  good.xbm  green.xbm  hlines2.xbm  image-bsd.xbm  (+148 more)
cdmt/: Install  MakeSSO  cdmt.config
config/: README.conf  amd.c  amd.h  indent.pro  openwin-menu-screensave  openwin-menu-xlock  system.fvwmrc.xlock  system.fvwmrc2.xlock  xlock.tcl  xlocklife.pl
debian/: README  changelog  control  copyright  docs  postinst  prerm  rules  watch
docs/: .Purify.swp  3d.howto  HACKERS.GUIDE  HACKERS.GUIDE.fr  Purify  Purify.solaris  Purify.sunos  Purify.sunos4  Purify.sunos5  Revisions  TODO  cell_automata  measure.lis  measure.mdl  measure.msr  measure.thr  xlock.hlp  xlock.html  xlock2xscreensaver
driver/: .gdbinit  .gitignore  Imakefile  Makefile  Makefile.in  README  XScreenSaver-Xm.ad  XScreenSaver.ad  XScreenSaver.ad.in  XScreenSaver.ad.in.00  XScreenSaver_Xm_ad.h  XScreenSaver_ad.h  atoms.c  atoms.h  atomswm.c  auth.h  blurb.c  blurb.h  clientmsg.c  clientmsg.h  compile.com  compile_axp.com  compile_decc.com  config.h  demo-Gtk-conf.c  demo-Gtk-conf.h  demo-Gtk-stubs.h  demo-Gtk-support.c  demo-Gtk-widgets.c  demo-Gtk-widgets.h  demo-Gtk.c  demo-Xm-widgets.c  demo-Xm.c  demo.c  demo.ui  dialog.c  dialogs-Gtk.c  dialogs-Xaw.c  dialogs-Xm.c  dialogs.c  (+140 more)
etc/: README.etc  barrierg.3dlife  cellxlock.sh  configure.tcl  descrip.mms  dtprofile  dtscreen.dt  ext.life  glider.3dlife  glider.hlife  glider.life  indent.pro  lifexlock.pl  play.sh  rplay.servers  showmodes.sh  system.fvwm2rc.xlock  system.fvwmrc.xlock  system.mwmrc.xlock  system.olwmrc.xlock  system.wmrc.xlock  vtswitch.c  xlock.java  xlock.pamd  xlock.sh  xlock.staff  xlock.tcl  xlock.tcl.diff  xlock1.sh  xlockFrame.java  xlockcell.sh  xlockhexlife.pl  xlocklife.pl  xlockmore.desktop  xlockranddur.pl  xlockrandimage.pl  xlockrle.pl  xlocksat.pl  xlockssh-add-keys.pl  xlockssh-add.sh  (+4 more)
glx/: buildlwo.c  buildlwo.h  e_textures.h  escher.c  gears.c  morph3d.c  pipeobjs.c  pipes.c  s1_1.c  s1_2.c  s1_3.c  s1_4.c  s1_5.c  s1_6.c  s1_b.c  sproingies.c  sproingiewrap.c  superquadrics.c
hackers/: README.hackers  fadeplot.c
hacks/: ._barcode.c  ._celtic.c  ._demon.c  ._eruption.c  ._flow.c  ._fps.c  ._interaggregate.c  ._noseguy.c  ._petri.c  ._shadebobs.c  ._slidescreen.c  ._webcollage-helper-cocoa.m  ._zoom.c  .gdbinit  Imakefile  Makefile  Makefile.in  Makefile.in.00  README  aaa_vms.notes  abstractile.c  abstractile.man  analogtv-cli.c  analogtv.c  analogtv.h  anemone.c  anemone.man  anemotaxis.c  anemotaxis.man  ansi-tty.c  ansi-tty.h  ant.c  ant.man  apollonian.c  apollonian.man  apple2-main.c  apple2.c  apple2.h  apple2.man  asm6502.c  (+426 more)
hacks/glx/: ._blinkbox.c  ._blocktube.c  ._boing.c  ._bouncingcow.c  ._buildlwo.c  ._carousel.c  ._circuit.c  ._cubestorm.c  ._flipflop.c  ._flyingtoasters.c  ._gears.c  ._glknots.c  ._gltext.c  ._grab-ximage.c  ._jigglypuff.c  ._jigsaw.c  ._klein.c  ._lavalite.c  ._menger.c  ._moebiusgears.c  ._pinion.c  ._polyhedra-gl.c  ._rubikblocks.man  ._skytentacles.c  ._sonar-icmp.c  ._sonar.c  ._spheremonics.c  ._stonerview.c  ._tangram.c  ._timetunnel.c  ._tunnel_draw.c  ._voronoi.c  CMakeLists.txt  INSTALL_EMSCRIPTEN.md  Makefile.in  README  WEB_VERSION_SUMMARY.md  alienbeacon  alienbeacon.man  antinspect.c  (+551 more)
hacks/glx/glsl/: README  alienbeacon.glsl  batteredplanet.glsl  bestill0-0.glsl  bestill1-0.glsl  bestill2-0.glsl  bestill3-0.glsl  bestill4-0.glsl  bestill5-0.glsl  bubblecolors.glsl  darktransit.glsl  downfall.glsl  driftclouds.glsl  elementalring.glsl  fluxcore.glsl  gimbalharmonics.glsl  goldenapollian.glsl  hexplasma.glsl  logarithmiccircles.glsl  neongravity-0.glsl  neongravity-1.glsl  neontriangulator.glsl  noxfire.glsl  prococean.glsl  protophore.glsl  rigrekt.glsl  selfreflect.glsl  skyline.glsl  stardome.glsl  starnest.glsl  stripeytorus.glsl  synthwavecity.glsl  topologica.glsl  trainmandala.glsl  trizm.glsl  truchetzoom.glsl  universeball.glsl
hacks/glx/web/: README.md  script.js  style.css
jwxyz/: Makefile.in  README  jwxyz-android.c  jwxyz-android.h  jwxyz-cocoa.h  jwxyz-cocoa.m  jwxyz.h  (+10 more)
(+1821 files in other folders)
